improve tests and logging (#8)
* improve tests

* update checkstyle plugin

* increase test coverage

* exclude config folder from jacoco report

* small improvements on pom.xml

* add secrets to workflow